--- a/package.json
+++ b/package.json
@@ -1,9 +1,13 @@
 {
   "name": "comp229assignment1-kaihongyeung-301229539",
-  "version": "0.0.0",
+  "version": "0.0.1",
   "private": true,
   "scripts": {
     "start": "node ./server.js"
+  },
+  "engines": {
+    "node": "^16.00.0",
+    "npm": "^8.0.0"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
@@ -16,5 +20,18 @@
     "jquery": "^3.6.0",
     "morgan": "~1.9.1",
     "popper.js": "^1.16.1"
-  }
+  },
+  "description": "COMP229 Assignment1",
+  "main": "index.js",
+  "devDependencies": {},
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/philipyeung/COMP229A1KaiHongYeung301229539.git"
+  },
+  "author": "KaiHongYeung",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/philipyeung/COMP229A1KaiHongYeung301229539/issues"
+  },
+  "homepage": "https://github.com/philipyeung/COMP229A1KaiHongYeung301229539#readme"
 }
