--- a/package.json
+++ b/package.json
@@ -6,8 +6,8 @@
     "start": "node ./server.js"
   },
   "engines": {
-    "node": "^14.0.0",
-    "npm": "^8.0.0"
+    "node": "16.x",
+    "npm": "8.x"
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
